--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,85 +1,154 @@
-.footer-clean {
-    padding: 50px 0;
-    background-color: #fff;
-    color: #4b4c4d;
+.footer {
+  width: 100%;
+  position: relative;
+  height: auto;
+  background-color: #e0e0e0;
+}
+.footer-cols{
+  margin-left: 18rem;
+}
+.footer .col {
+  width: 190px;
+  height: auto;
+  float: left;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 40px 20px 70px 20px;
+}
+.footer .col h1 {
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+  font-size: 14px;
+  line-height: 17px;
+  padding: 20px 0px 5px 0px;
+  color: rgb(70, 70, 70);
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
+}
+.footer .col ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.footer .col ul li a {
+  color: #6b6b6b;
+  font-size: 14px;
+  font-family: inherit;
+  font-weight: bold;
+  padding: 5px 0px 5px 0px;
+  cursor: pointer;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+}
+.footer-social ul li {
+  padding-top: 20px;
+  display: inline-block;
+  padding-right: 15px !important;
 }
 
-.footer-clean h3 {
-    margin-top: 0;
-    margin-bottom: 12px;
-    font-weight: bold;
-    font-size: 16px;
+.footer-links{
+  padding-top: 20px !important;
+}
+.footer-link-items{
+  padding-top: 15px;
+}
+.footer-hr{
+  color: rgb(178, 206, 224);
+  border-top: 2px solid rgb(139, 166, 175);
 }
 
-.footer-clean ul {
-    padding: 0;
-    list-style: none;
-    line-height: 1.6;
+.footer .col ul li a:hover {
+  color: #000000;
+  transition: 0.1s;
+  -webkit-transition: 0.1s;
+  -moz-transition: 0.1s;
+}
+.clearfix {
+  clear: both;
+}
+
+.footer-logo-image{
+  max-width: 100px;
+  height: auto;
+  padding-top: 5px;
+}
+.flogo-img-col{
+  min-width: 360px;
+}
+
+.footer-cols{
+  padding-top: 40px !important;
+}
+
+@media only screen and (min-width: 1280px) {
+  .contain {
+    width: 1200px;
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 1139px) {
+  .contain .social {
+    width: 1000px;
+    display: block;
+  }
+  .social h1 {
+    margin: 0px;
+  }
+}
+@media only screen and (max-width: 950px) {
+  .footer .col {
+    width: 33%;
+  }
+  .footer .col h1 {
     font-size: 14px;
-    margin-bottom: 0;
-}
-
-.footer-clean ul a {
-    color: inherit;
-    text-decoration: none;
-    opacity: 0.8;
-}
-
-.footer-clean ul a:hover {
-    opacity: 1;
-}
-
-.footer-clean .item.social {
-    text-align: right;
-}
-
-@media (max-width:767px) {
-    .footer-clean .item {
-        text-align: center;
-        padding-bottom: 20px;
-    }
-}
-
-@media (max-width: 768px) {
-    .footer-clean .item.social {
-        text-align: center;
-    }
-}
-
-.footer-clean .item.social>a {
-    font-size: 24px;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    display: inline-block;
-    text-align: center;
-    border-radius: 50%;
-    border: 1px solid #ccc;
-    margin-left: 10px;
-    margin-top: 22px;
-    color: inherit;
-    opacity: 0.75;
-}
-
-.footer-clean .item.social>a:hover {
-    opacity: 0.9;
-}
-
-@media (max-width:991px) {
-    .footer-clean .item.social>a {
-        margin-top: 40px;
-    }
-}
-
-@media (max-width:767px) {
-    .footer-clean .item.social>a {
-        margin-top: 10px;
-    }
-}
-
-.footer-clean .copyright {
-    margin-top: 14px;
-    margin-bottom: 0;
+  }
+  .footer .col ul li {
     font-size: 13px;
-    opacity: 0.6;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .footer .col {
+    width: 50%;
+  }
+  .footer .col h1 {
+    font-size: 14px;
+  }
+  .footer .col ul li {
+    font-size: 13px;
+  }
+}
+@media only screen and (max-width: 340px) {
+  .footer .col {
+    width: 100%;
+  }
+}
+
+.copyright {
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  color: #fff;
+  background-color: #000;
+  padding: 5px 0;
+}
+
+.footer {
+  margin-top: 80px;
+  position: relative;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+  /* top:9vh; */
+}
+
+.footer-icon a{
+    color: #6b6b6b !important;
+}
+.footer-icon a:hover{
+    color: #000 !important;
 }
