--- a/src/components/pages/culclub.css
+++ b/src/components/pages/culclub.css
@@ -17,7 +17,7 @@ html {
     font-family: "Jost", sans-serif;
     position: relative;
     display: inline-block;
-    border-radius: 10px;
+    border-radius: 5px;
     overflow: hidden;
     margin: 10px;
     min-width: 250px;
@@ -90,11 +90,11 @@ html {
     text-align: center;
 }
 
-.banner {
+.banner2 {
     width: 100%;
     height: 100vh;
     /* background-color: #000; */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://www.collegechalo.com/news/wp-content/uploads/2020/10/IIT-Mandi-winters-2048x1362.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://students.iitmandi.ac.in/main/ug/images/bg/bgb.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -268,4 +268,8 @@ html {
     .button-59 {
         min-width: 70px;
     }
+}
+.music-logo{
+    min-width: 109px;
+     max-height: 109px;
 }
