--- a/src/components/pages/interiit.css
+++ b/src/components/pages/interiit.css
@@ -17,6 +17,12 @@
   text-align: center;
 }
 
+.host-content{
+  font-size: large;
+  padding-left: 10rem;
+  padding-right: 10rem;
+  text-align:justify;
+}
 .container-content {
   display: flex;
   align-items: left;
